@@ -1,3 +1,8 @@
+2006-09-04  John Paul Wallington  <jpw@pobox.com>
+
+	* simple.el (completion-show-help): New defcustom.
+	(completion-setup-function): Heed it.
+
 2006-09-04  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* term/xterm.el (terminal-init-xterm): Add C-M- bindings.
